--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/entry.ts",
+    "start": "nodemon --exec ts-node src/entry.ts --ignore data.json",
     "build": "tsc --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
